--- a/index.html
+++ b/index.html
@@ -21,26 +21,40 @@
 <!-- HERO -->
 
 <div class="jumbotron text-white" style="background-image: url(https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/hero-background.jpg); background-size: 100%;" >
-<div class = "page-header text-danger">
-   <h1>Netflix
-        <input class="btn my-2 my-lg-0">
-        <a href="/signup" class="btn btn-danger float-right" role="button">Sign Up</a>
-   </h1>
-</div>
+    <div class = "page-header text-danger">
+        <h1>Netflix
+                <input class="btn my-2 my-lg-0">
+                <a href="/signup" class="btn btn-danger float-right" role="button">Sign Up</a>
+        </h1>
+    </div>
+
     <div class="container for-about text-center">
-    <h1>All of Netflix.</h1>
-    <h1>Free for 30 days.</h1>
+        <h1>All of Netflix.</h1>
+        <h1>Free for 30 days.</h1>
     <div class="p-3">
-        <a href="https://via.placeholder.com"><img src="https://via.placeholder.com/950x250.png"></a>
-    <div class="p-3" style="font-family: Open Sans Condensed; font-style: sans-serif; font-size: 20px";>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-    <h3> We'll email you a reminder three days before your trial ends.</h3>
-    <h3>Cancel anytime before 11/26 and you won't be charged.</h3>
-    <a class="btn btn-danger btn-lg" href="#" role="button">TRY 30 DAYS FREE > </a>
+        <!-- Green Bar -->
+        <div style="background-color: rgba(255,255,255,0.2); border-radius:30px;">
+            <div style="width: 50%; height: 40px; border-radius:30px; background-color:green;">
+                <div style="width: 2.4em; height: 2.5em; border-radius:90px; background-color:white; position: relative; right: calc(-100% + 2.4em)">
+                
+                <div style="width: 2.4em; height: 2.5em; border-radius:90px; background-color:white; position: relative; left: 900%">
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="p-3">
+        <h3> We'll email you a reminder three days before your trial ends.</h3>
+        <h3>Cancel anytime before 11/26 and you won't be charged.</h3>
+        <div class="p-3">
+            <a class="btn btn-danger btn-lg" href="#" role="button">TRY 30 DAYS FREE > </a>
+        </div>
     </div>
     </div>
     </div>
  </div>
+
 
 
 
@@ -111,29 +125,29 @@
     <h1 class="text-white text-center" style="font-size:50px">Frequently Asked Questions</h1>
     <div class="card black">
     <div class="row">
-        <div class="p-5 col-md-10">
-        <div class="card-block">
-            <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
-                    <li class="list-group-item bg-dark text-white">What is Netflix?</li>
-            </ul>
-            <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
-                    <li class="list-group-item bg-dark text-white">How much does Netflix cost?</li>
-            </ul>
-            <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
-                    <li class="list-group-item bg-dark text-white">Where can I watch?</li>
-            </ul>
-            <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
-                    <li class="list-group-item bg-dark text-white">How do I cancel?</li>
-            </ul>
-            <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
-                    <li class="list-group-item bg-dark text-white">What can I watch on Netflix?</li>
-            </ul>
-            <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
-                    <li class="list-group-item bg-dark text-white">How does the free trial work?</li>
-            </ul>
-        <div class="p-3 text-center">
-        <a class="btn btn-danger btn-lg text-center" href="#" role="button">TRY 30 DAYS FREE > </a>
-        </div>
+        <div class="p-5 col-md-10 my-auto">
+            <div class="card-block">
+                <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
+                        <li class="list-group-item bg-dark text-white">What is Netflix?</li>
+                </ul>
+                <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
+                        <li class="list-group-item bg-dark text-white">How much does Netflix cost?</li>
+                </ul>
+                <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
+                        <li class="list-group-item bg-dark text-white">Where can I watch?</li>
+                </ul>
+                <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
+                        <li class="list-group-item bg-dark text-white">How do I cancel?</li>
+                </ul>
+                <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
+                        <li class="list-group-item bg-dark text-white">What can I watch on Netflix?</li>
+                </ul>
+                <ul class="p-1 list-inline list-group-flush bg-dark justify-content-center">
+                        <li class="list-group-item bg-dark text-white">How does the free trial work?</li>
+                </ul>
+            <div class="p-3 text-center">
+            <a class="btn btn-danger btn-lg text-center" href="#" role="button">TRY 30 DAYS FREE > </a>
+            
         </div>
         </div>
     </div>
@@ -145,126 +159,78 @@
 
 <!-- CALL TO ACTION -->
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
-</html>
+
+
 
 <!-- FOOTER -->
-<div class="footer navbar-fixed-bottom absolute">
-    <div class="row">
-    <div class="column">
-        <ul class="">
-            <li class="">
-                <a class="footer-link" href="">
-                    <span id="">FAQ</span>
-                </a>
-            </li>
-    </div>
-    <div class="column">
-            <li>
-                <a class="footer-link" href="">
-                    <span id="">Help Center</span>
-                </a>
-            </li>
-    </div>
-    <div class="column">
-            <li class="">
-                <a class="footer-link" href="">
-                    <span id="">Account</span>
-                </a>
-            </li>
-        </ul>
-    </div>
-    </div>
-    <div class="row">
-        <div class="column">
-            <ul class="">
-                <li>
-                    <a class="footer-link" href="">
-                        <span id="">Invester Relations</span>
-                    </a>
-                </li>
-        </div>
-        <div class="column">
-                <li class="">
-                    <a class="footer-link" href="">
-                        <span id="">Jobs</span>
-                    </a>
-                </li>
-        </div>
-        <div class="column">
-                <li class="">
-                    <a class="footer-link" href="">
-                        <span id="">Redeem Gift Cards</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        </div>
-        <div class="row">
-        <div class="column">
-            <ul class="">
-                <li>
-                    <a class="footer-link" href="">
-                        <span id="">Ways to Watch</span>
-                    </a>
-                </li>
-        </div>
-        <div class="column">
-                <li class="">
-                    <a class="footer-link" href="">
-                        <span id="">Terms of Use</span>
-                    </a>
-                </li>
-        </div>
-        <div class="column">
-                <li class="">
-                    <a class="footer-link" href="">
-                        <span id="">Privacy</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        </div>
-        <div class="row">
-        <div class="column">
-            <ul class="">
-                <li>
-                    <a class="footer-link" href="">
-                        <span id="">Corporate Information</span>
-                    </a>
-                </li>
-        </div>
-        <div class="column">
-                <li class="">
-                    <a class="footer-link" href="">
-                        <span id="">Contact Us</span>
-                    </a>
-                </li>
-        </div>
-        <div class="column">
-                <li class="">
-                    <a class="footer-link" href="">
-                        <span id="">MSpeed Test</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        </div>
-        <div class="row">
-        <div class="column">
-            <ul class="">
-                <li class="">
-                    <a class="footer-link" href="">
-                        <span id="">Netflix Originals</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        </div>
+<div class ="justify-content-center">
+    <h3>Questions? Call 1-866-579-7172</h3>
 
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active" href="#!">FAQ</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Help Center</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Account</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Media Center</a>
+        </li>
+    </ul>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active" href="#!">Investor Relations</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Jobs</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Redeem Gift Cards</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Buy Gift Cards</a>
+        </li>
+    </ul>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active" href="#!">Ways to Watch</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Terms of Use</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Privacy</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Cookie Preferences</a>
+        </li>
+    </ul>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active" href="#!">Corporate Information</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Contact Us</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Speed Test</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!">Legal Notices</a>
+        </li>
+    </ul>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active" href="#!">Netflix Originals</a>
+        </li>
+    </ul>
+</div>
+
+
+<!-- Language Option in footer -->
 <div class="dropdown show">
     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         English
@@ -274,3 +240,11 @@
         <a class="dropdown-item" href="#">Espanol</a>
 </div>
 </div>
+
+</body>
+</html>
+
+<!-- Javascript -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
