--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         <div style="background-color: rgba(255,255,255,0.2); border-radius:30px;">
             <div style="width: 50%; height: 40px; border-radius:30px; background-color:green;">
                 <div style="width: 2.4em; height: 2.5em; border-radius:90px; background-color:white; position: relative; right: calc(-100% + 2.4em)">
-                
                 <div style="width: 2.4em; height: 2.5em; border-radius:90px; background-color:white; position: relative; left: 900%">
                 </div>
                 </div>
@@ -107,9 +106,9 @@
         <div class="col-md-6">
         <div class="card-block">
             <h1 class="card-title text-white black":>Watch everywhere.</h1>
-            <h2 class="text-white black">Stream unlimited movies and TV</h2>
-            <h2 class="text-white black">shows on your phone, tablet, laptop</h2>
-            <h2 class="text-white black">and TV without paying more</h2>
+            <h4 class="text-white black">Stream unlimited movies and TV</h4>
+            <h4 class="text-white black">shows on your phone, tablet, laptop</h4>
+            <h4 class="text-white black">and TV without paying more</h4>
         </div>
         </div>
         <div class="col-md-6">
@@ -163,68 +162,68 @@
 
 
 <!-- FOOTER -->
-<div class ="justify-content-center">
+<div class ="justify-content-center text-secondary">
     <h3>Questions? Call 1-866-579-7172</h3>
 
     <ul class="nav justify-content-center">
         <li class="nav-item">
-            <a class="nav-link active" href="#!">FAQ</a>
+            <a class="nav-link active text-secondary" href="#!">FAQ</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#!">Help Center</a>
+            <a class="nav-link text-secondary" href="#!">Help Center</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#!">Account</a>
+            <a class="nav-link text-secondary" href="#!">Account</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#!">Media Center</a>
-        </li>
-    </ul>
-    <ul class="nav justify-content-center">
-        <li class="nav-item">
-            <a class="nav-link active" href="#!">Investor Relations</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#!">Jobs</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#!">Redeem Gift Cards</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#!">Buy Gift Cards</a>
+            <a class="nav-link text-secondary" href="#!">Media Center</a>
         </li>
     </ul>
     <ul class="nav justify-content-center">
         <li class="nav-item">
-            <a class="nav-link active" href="#!">Ways to Watch</a>
+            <a class="nav-link active text-secondary" href="#!">Investor Relations</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#!">Terms of Use</a>
+            <a class="nav-link text-secondary" href="#!">Jobs</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#!">Privacy</a>
+            <a class="nav-link text-secondary" href="#!">Redeem Gift Cards</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#!">Cookie Preferences</a>
-        </li>
-    </ul>
-    <ul class="nav justify-content-center">
-        <li class="nav-item">
-            <a class="nav-link active" href="#!">Corporate Information</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#!">Contact Us</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#!">Speed Test</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#!">Legal Notices</a>
+            <a class="nav-link text-secondary" href="#!">Buy Gift Cards</a>
         </li>
     </ul>
     <ul class="nav justify-content-center">
         <li class="nav-item">
-            <a class="nav-link active" href="#!">Netflix Originals</a>
+            <a class="nav-link active text-secondary" href="#!">Ways to Watch</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-secondary" href="#!">Terms of Use</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-secondary" href="#!">Privacy</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-secondary" href="#!">Cookie Preferences</a>
+        </li>
+    </ul>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active text-secondary" href="#!">Corporate Information</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-secondary" href="#!">Contact Us</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-secondary" href="#!">Speed Test</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-secondary" href="#!">Legal Notices</a>
+        </li>
+    </ul>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active text-secondary" href="#!">Netflix Originals</a>
         </li>
     </ul>
 </div>
