--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
     <div class="container for-about text-center">
         <h1>All of Netflix.</h1>
         <h1>Free for 30 days.</h1>
+    <div class="p-0">
+        <div class="text" style="color:green; position: relative; left: -42%; font-size:24">Free 30 days</div>
+    </div>
     <div class="p-3">
         <!-- Green Bar -->
         <div style="background-color: rgba(255,255,255,0.2); border-radius:30px;">
             <div style="width: 50%; height: 40px; border-radius:30px; background-color:green;">
                 <div style="width: 2.4em; height: 2.5em; border-radius:90px; background-color:white; position: relative; right: calc(-100% + 2.4em)">
                 <div style="width: 2.4em; height: 2.5em; border-radius:90px; background-color:white; position: relative; left: 900%">
+                <div style="width: 0.6em; height: 4.0em; background-color: black; position: relative; left: -1100%">
+                <div style="width: 0.1em; height: 4.0em; background-color: white; position: relative; left: 4.0">
+                </div>
+                </div>
                 </div>
                 </div>
             </div>
@@ -44,14 +51,20 @@
     </div>
 
     <div class="p-3">
-        <h3> We'll email you a reminder three days before your trial ends.</h3>
-        <h3>Cancel anytime before 11/26 and you won't be charged.</h3>
-        <div class="p-3">
+        <h4 style=" position: relative; left: -2.75%">✉️ 3 day reminder</h4>
+    </div>
+    <div class="p-3">
+        <h4> We'll email you a reminder three days before your trial ends.</h4>
+        <h4>Cancel anytime before 11/26 and you won't be charged.</h4>
+        <div class="p-5">
             <a class="btn btn-danger btn-lg" href="#" role="button">TRY 30 DAYS FREE > </a>
         </div>
+    
+    </div>
+    <div style="background-color: rgba(71, 70, 70, 0.836); width: 125em; height: 0.5em; border-radius:30px; position: relative; left: -50%"></div>
     </div>
     </div>
-    </div>
+    
  </div>
 
 
@@ -72,9 +85,14 @@
         <div class="col-md-6">
         <div class="card-img-bottom">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" class="card-img" alt="...">
+        <div class="p-4">
+        </div>
         </div>
         </div>
     </div>
+    </div>
+        <div style="background-color: rgba(71, 70, 70, 0.836); width: 125em; height: 0.5em; border-radius:30px; position: relative; left: -50%">
+        </div>
     </div>
 </div>
 </span>
@@ -85,6 +103,8 @@
         <div class="col-md-6">
         <div class="card-img-bottom">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile.png" class="card-img" alt="...">
+        <div class="p-5">
+        </div>
         </div>
         </div>
         <div class="col-md-6">
@@ -97,6 +117,10 @@
         </div>
         </div>
     </div>
+    </div>
+    <div class="p-2">
+        <div style="background-color: rgba(71, 70, 70, 0.836); width: 125em; height: 0.5em; border-radius:30px; position: relative; left: -50%">
+        </div>
     </div>
 </div>
 
@@ -115,6 +139,12 @@
         <div class="card-img-bottom">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile.png" class="card-img" alt="...">
         </div>
+        <div class="p-3">
+        </div>
+        </div>
+    </div>
+    <div class="p-1">
+        <div style="background-color: rgba(71, 70, 70, 0.836); width: 125em; height: 0.5em; border-radius:30px; position: relative; left: -50%">
         </div>
     </div>
     </div>
